option('CAP',       type: 'boolean', value: true,  description: 'Linux capabilities')
option('CURSES',    type: 'boolean', value: true,  description: '[N]Curses version')
option('UNICODE',   type: 'boolean', value: true,  description: 'Unicode support')
option('DNS',       type: 'boolean', value: true,  description: 'DNS support')
option('IPINFO',    type: 'boolean', value: true,  description: 'IPINFO support')
option('SPLIT',     type: 'boolean', value: true,  description: 'SPLIT mode')
option('GRAPH',     type: 'boolean', value: false, description: 'XCB/Xlib cairo graphs')
option('IPV6',      type: 'boolean', value: true,  description: 'IPv6 support')
option('MPLS',      type: 'boolean', value: true,  description: 'MPLS decoding')
option('OUTRAW',    type: 'boolean', value: false, description: 'Output: format raw')
option('OUTTXT',    type: 'boolean', value: true,  description: 'Output: format text')
option('OUTCSV',    type: 'boolean', value: true,  description: 'Output: format csv')
option('OUTJSON',   type: 'boolean', value: true,  description: 'Output: format json')
option('OUTXML',    type: 'boolean', value: true,  description: 'Output: format xml')
option('DEBPOLL',   type: 'boolean', value: false, description: 'Debug: syslog poll')
option('DEBNET',    type: 'boolean', value: false, description: 'Debug: syslog net')
option('DEBDNS',    type: 'boolean', value: false, description: 'Debug: syslog dns')
option('DEBIPINFO', type: 'boolean', value: false, description: 'Debug: syslog ipinfo')
option('SBIN',      type: 'boolean', value: false, description: 'Install to sbin')
